Scrollbar working properly, now need to make sure the view changes based on the handle's location on the scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ body {
   margin-bottom: 16px;
   font-family: "Arial";
   color: #c6d4df;
+  width: 815px;
 }
 
 h4 {
@@ -87,9 +88,8 @@ a:-webkit-any-link {
 }
 
 .handle {
-  position: absolute;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 1);
   border-radius: 3px;
   height: 18px;
   width: 60px;
